fix(ui): color distribution gradually Before the colors had a biggest jump to the max value (white), so it looked like the alignment was not well defined. Now the color scale is more gradual.

--- a/styles.css
+++ b/styles.css
@@ -21,13 +21,13 @@
 
 /* Define la escala de grises */
 .alignment-cell[data-value="10"] { background-color: #fff; color: #000; }
-.alignment-cell[data-value="9"]  { background-color: #999; color: #000; }
-.alignment-cell[data-value="8"]  { background-color: #888; color: #000; }
-.alignment-cell[data-value="7"]  { background-color: #777; color: #000; }
-.alignment-cell[data-value="6"]  { background-color: #666; color: #FFF; }
-.alignment-cell[data-value="5"]  { background-color: #555; color: #FFF; }
-.alignment-cell[data-value="4"]  { background-color: #444; color: #FFF; }
-.alignment-cell[data-value="3"]  { background-color: #333; color: #FFF; }
-.alignment-cell[data-value="2"]  { background-color: #222; color: #FFF; }
-.alignment-cell[data-value="1"]  { background-color: #111; color: #FFF; }
+.alignment-cell[data-value="9"]  { background-color: #eee; color: #000; }
+.alignment-cell[data-value="8"]  { background-color: #ccc; color: #000; }
+.alignment-cell[data-value="7"]  { background-color: #bbb; color: #000; }
+.alignment-cell[data-value="6"]  { background-color: #999; color: #000; }
+.alignment-cell[data-value="5"]  { background-color: #888; color: #000; }
+.alignment-cell[data-value="4"]  { background-color: #666; color: #FFF; }
+.alignment-cell[data-value="3"]  { background-color: #555; color: #FFF; }
+.alignment-cell[data-value="2"]  { background-color: #333; color: #FFF; }
+.alignment-cell[data-value="1"]  { background-color: #222; color: #FFF; }
 .alignment-cell[data-value="0"]  { background-color: #000; color: #FFF; }
